# unfollower_bot

./: .dockerignore  .gitignore  BACKEND_DEPLOYMENT_PROMPT.md  DEBUG_REFERRALS.md  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  ROBOKASSA_URLS.md  check_referrals.py  docker-compose.prod.yml  docker-compose.yml  env.example  env.prod.example  pyproject.toml  requirements.txt
.cursor/plans/: mutual_followers_bot_mvp_f97a8f62.plan.md
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_monetization.py  003_add_payment_events.py  004_update_tariffs_stars_prices.py  005_add_test_tariffs_for_stars_payment.py  006_update_tariff_names.py  007_add_instagram_sessions.py  007_remove_test_trial_tariffs.py  008_add_instagram_sessions.py  009_session_auto_refresh.py  (+3 more)
app/: __init__.py  config.py  main.py
docs/: DEPLOYMENT.md  INSTAGRAM_SESSION_REFRESH_RESEARCH.md  README.md  SERVER_SETUP.md  SESSION_AUTO_REFRESH.md  instagram-session-research.md  reqs.md  robokassa_cheatsheet.md  robokassa_research_prompt.md  telegram_stars_prompt.md  telegram_stars_research_prompt.md  upgrade_prompt.md
law_docs/: oferta_504032433664.docx
nginx/: nginx-initial.conf  nginx.conf.template
scripts/: QUICK_START.md  apply-session-migration.sh  backup.sh  check-production-ready.sh  check-tariffs.sh  cleanup_server.sh  deploy.sh  fix-alembic-and-apply-007.sh  fix-alembic-direct.sh  fix-alembic-version.sh  fix-migrations.sh  full-rebuild.sh  init-ssl.sh  remove-test-tariffs-manual.sh  reset-database.sh  setup_server.sh  test-admin-session.sh
tests/: __init__.py  conftest.py
(+51 files in other folders)
